tests/rosetta/out/C/abundant-odd-numbers.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:38Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int _sum_int(list_int v) {
  int sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
list_int divisors(int n) {
  list_int divs = list_int_create(1);
  divs.data[0] = 1;
  list_int divs2 = list_int_create(0);
  int i = 2;
  while (i * i <= n) {
    if (n % i == 0) {
      int j = (int)((((double)n) / ((double)i)));
      divs = 0;
      if (i != j) {
        divs2 = 0;
      }
    }
    i = i + 1;
  }
  int j = divs2.len - 1;
  while (j >= 0) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = divs2.data[j];
    list_int tmp2 = concat_list_int(divs, tmp1);
    divs = tmp2;
    j = j - 1;
  }
  return divs;
}

int sum(list_int xs) {
  int tot = 0;
  for (int tmp3 = 0; tmp3 < xs.len; tmp3++) {
    int v = xs.data[tmp3];
    tot = tot + v;
  }
  return tot;
}

const char *sumStr(list_int xs) {
  const char *s = "";
  int i = 0;
  while (i < xs.len) {
    char *tmp4 = _str(xs.data[i]);
    char *tmp5 = concat_string(s, tmp4);
    char *tmp6 = concat_string(tmp5, " + ");
    s = tmp6;
    i = i + 1;
  }
  return slice_string(s, 0, strlen(s) - 3);
}

const char *pad2(int n) {
  char *tmp7 = _str(n);
  const char *s = tmp7;
  if (strlen(s) < 2) {
    char *tmp8 = concat_string(" ", s);
    return tmp8;
  }
  return s;
}

const char *pad5(int n) {
  char *tmp9 = _str(n);
  const char *s = tmp9;
  while (strlen(s) < 5) {
    char *tmp10 = concat_string(" ", s);
    s = tmp10;
  }
  return s;
}

int abundantOdd(int searchFrom, int countFrom, int countTo, int printOne) {
  int count = countFrom;
  int n = searchFrom;
  while ((count < countTo)) {
    list_int divs = divisors(n);
    double tot = _sum_int(divs);
    if (tot > n) {
      count = count + 1;
      if ((printOne && count < countTo)) {
        n = n + 2;
        continue;
      }
      const char *s = sumStr(divs);
      if ((!printOne)) {
        char *tmp11 = _str(tot);
        char *tmp12 = _str(tot);
        printf("%d\n",
               pad2(count) + ". " + pad5(n) + " < " + s + " = " + tmp12);
      } else {
        char *tmp13 = _str(n);
        char *tmp14 = concat_string(tmp13, " < ");
        char *tmp15 = concat_string(tmp14, s);
        char *tmp16 = concat_string(tmp15, " = ");
        char *tmp17 = _str(tot);
        char *tmp18 = concat_string(tmp16, tmp17);
        printf("%s\n", tmp18);
      }
    }
    n = n + 2;
  }
  return n;
}

int main() {
  int max = 25;
  char *tmp19 = _str(max);
  char *tmp20 = concat_string("The first ", tmp19);
  char *tmp21 = concat_string(tmp20, " abundant odd numbers are:");
  printf("%s\n", tmp21);
  int n = abundantOdd(1, 0, max, 0);
  printf("\\nThe one thousandth abundant odd number is:\n");
  abundantOdd(n, max, 1000, 1);
  printf("\\nThe first abundant odd number above one billion is:\n");
  abundantOdd(1000000001, 0, 1, 1);
}

int main() {
  main();
  return 0;
}
